# rumo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
api/: Cargo.toml
api/src/: lib.rs
entity/: Cargo.toml
entity/src/: comment.rs  content.rs  field.rs  lib.rs  meta.rs  option.rs  prelude.rs  relationship.rs  user.rs
service/: Cargo.toml
service/src/: lib.rs
src/: db.rs  init.rs  lib.rs  main.rs  preload.rs
src/attachments/: db.rs  de.rs  errors.rs  forms.rs  mod.rs  models.rs  ser.rs  urls.rs  utils.rs  views.rs
src/categories/: db.rs  forms.rs  mod.rs  models.rs  urls.rs  views.rs
src/comments/: db.rs  forms.rs  mod.rs  models.rs  urls.rs  views.rs
src/common/: db.rs  errors.rs  extractors.rs  forms.rs  mod.rs  models.rs  utils.rs
src/entity/: comment.rs  content.rs  field.rs  meta.rs  mod.rs  option.rs  relationship.rs  user.rs
src/pages/: db.rs  forms.rs  mod.rs  models.rs  urls.rs  views.rs
src/posts/: db.rs  forms.rs  mod.rs  models.rs  urls.rs  views.rs
src/tags/: db.rs  forms.rs  mod.rs  models.rs  urls.rs  views.rs
src/users/: db.rs  errors.rs  extractors.rs  forms.rs  mod.rs  models.rs  urls.rs  utils.rs  views.rs
tests/: test_attachments.rs  test_categories.rs  test_comments.rs  test_pages.rs  test_posts.rs  test_tags.rs  test_users.rs
tests/common/: mod.rs
