[package]
name = "rumo"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "service", "entity"]

[dependencies]
rumo-api = { path = "api" }

[profile.release]
strip = true
lto = true
codegen-units = 1
