[package]
name = "rumo"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "service", "entity"]

[dependencies]
rumo-api = { path = "api" }
rumo-service = { path = "service" }

[dev-dependencies]
axum = "0.7"
tower = "0.4"
serde = "1"
serde_json = "1"
hyper = "1"
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
