[package]
name = "rumo"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1"
http-body-util = "0.1"
axum = { version = "0.7", features = ["multipart"] }
hyper = { version = "1.3", features = ["full"] }
tokio = { version = "1.22", features = ["full"] }

axum-client-ip = "0.6"
axum-macros = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
validator = { version = "0.18", features = ["derive"] }

tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
minijinja = "2.0"
lazy_static = "1.4"

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres", "any", "json"] }

jwt = "0.16"
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"

rand = "0.8"
chrono = "0.4"
getopts = "0.2"
thiserror = "1.0"
once_cell = "1.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
