[package]
name = "rumo-api"
version = "0.10.0"
edition = "2021"

[dependencies]
rumo-service = { path = "../service" }

hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["timeout", "trace", "fs"] }